package tadite.javase.elevatorSimulator.model.elevator;

public interface ElevatorDoorMechanism {
    void openDoor();
    void closeDoor();
}
