package tadite.javase.elevatorSimulator.model.elevator;

import tadite.javase.elevatorSimulator.model.elevator.ElevatorRequest;

public interface RequestAddingManager {
    void addRequest(ElevatorRequest request);
}
