package tadite.javase.elevatorSimulator.model.misc;

public interface Button {
    void addRequest(int level);
}
