package tadite.javase.elevatorSimulator.model.passenger;

public interface PersonState {
    public void action();
}
